Tue Sep  8 12:05:00 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_read_reparse_point): return correct required
	  buffer size for IO_REPARSE_TAG_MOUNT_POINT.

Tue Sep  8 00:14:43 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* process.c (rb_execarg_parent_start1): raise with the target path
	  name when open() failed.

Mon Sep  7 23:45:28 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* process.c (rb_exec_fail): raise with the target directory name
	  when chdir() failed.  pointed out by sorah.

Mon Sep  7 22:05:28 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (insert): should use plain strdup() instead of
	  ruby_strdup() at startup time, and plain free()ed in cmdglob().

Mon Sep  7 16:49:30 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_core.h (rb_vm_struct): define objspace always regardless
	  ENABLE_VM_OBJSPACE.

Mon Sep  7 15:54:58 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby_atomic.h (ATOMIC_VALUE_CAS): fix typo.
	  TODO: make arguments of all CAS macros consistent.

Sun Sep  6 16:07:22 2015  Eric Wong  <e@80x24.org>

	* ccan/list/list.h: suppress unused argument warnings
	  [ccan commit 6aaca17e07588997417a73fac19dcf0ff17ed81b]

Sat Sep  5 11:39:52 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/rss/rss.rb (Time#w3cdtf): fix zero-trimmed width of fraction
	  digits.  [ruby-core:70667] [Bug #11509]

Sat Sep  5 08:28:58 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* hash.c (rb_hash_equal, rb_hash_eql): [DOC] the orders of each
	  hashes are not compared.  [Bug #11508]

Fri Sep  4 23:26:22 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/win32.h: fix macro name for VC runtime version,
	  RT_VER is only in Makefile.

Fri Sep  4 17:46:17 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* doc/contributing.rdoc: fix configuration option.
	  [ci skip] [fix GH-1009]

Fri Sep  4 04:46:54 2015  Koichi Sasada  <ko1@atdot.net>

	* iseq.c (iseq_memsize): functions for wrapper object should have